# BlauVPN

./: .gitignore  CMakeLists.txt  CMakeLists.txt.txt  CommonFunction.cpp  IPeripheralCommunication.h  README.md  main.cpp  main.cpp.autosave  tcpserver.cpp  tcpserver.h  tundevicecommunication.h
Boost_Raw_Packet/: Boost_Raw_Packet.sln
Boost_Raw_Packet/Boost_Raw_Packet/: Boost_Raw_Packet.cpp  Boost_Raw_Packet.vcxproj  Boost_Raw_Packet.vcxproj.filters
Client/: Client.sln  CmakeLists.txt  main.cpp
Client/Client/: Client.cpp  Client.vcxproj  Client.vcxproj.filters  ConnectionRequestMessage.cpp  ConnectionRequestMessage.h  IMessage.h  ISerializableMessage.h  RawTCPClient.cpp  RawTCPClient.h  RawTCPServer.cpp  RawTCPServer.h  TCPClient.cpp  TCPClient.h  TCPRawPacketDecoder.cpp  TCPRawPacketDecoder.h  TCPRawPacketEncoder.cpp  TCPRawPacketEncoder.h  TCPRawPacketHandler.h
Server/: CMakeLists.txt  CommonFunction.h  Linux_Info.txt  main.cpp  tcpserver.cpp  tcpserver.h  tundevicecommunication.cpp
Server/package main  import (    "os"    "fmt"    "github.com/kardianos/: main.go
build-Client-Desktop_Qt_5_11_0_MinGW_32bit-Default/: ClientBlauVPN.cbp
build-Server-Desktop_Qt_5_14_0_GCC_64bit-Debug/: ServerBlauVPN.cbp
build-Server-Desktop_Qt_5_14_0_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-1d232f6d11b953ae8f99.json  cmakeFiles-v1-fdd862d0cb142fcd7d88.json  codemodel-v2-46b5ea8b40516be82412.json  index-2021-10-10T06-35-47-0281.json  target-ServerBlauVPN-Debug-9ef43b6f6771571c1e18.json
